test-output/src/snapshots/test_output__generated_tests__echo_bool.snap
---
source: test-output/src/generated_tests.rs
expression: "./cases/echo_bool"
---
--- CODE
pub fn main() {
  echo True
  echo False
}

--- OUTPUT ON ERLANG TARGET
True
False

--- OUTPUT ON JAVASCRIPT TARGET
True
False
