test-output/src/snapshots/test_output__generated_tests__echo_float.snap
---
source: test-output/src/generated_tests.rs
expression: "./cases/echo_float"
---
--- CODE
pub fn main() {
  echo 1.0
  echo 2.1
  echo 11.11
}

--- OUTPUT ON ERLANG TARGET
[90msrc/main.gleam:2[39m
1.0
[90msrc/main.gleam:3[39m
2.1
[90msrc/main.gleam:4[39m
11.11

--- OUTPUT ON JAVASCRIPT TARGET
[90msrc/main.gleam:2[39m
1
[90msrc/main.gleam:3[39m
2.1
[90msrc/main.gleam:4[39m
11.11
