test-output/src/snapshots/test_output__generated_tests__echo_function.snap
---
source: test-output/src/generated_tests.rs
expression: "./cases/echo_function"
---
--- CODE
pub fn main() {
  echo fn(n) { n + 1 }
  echo private
}

fn private() {
  1
}

--- OUTPUT ON ERLANG TARGET
[90msrc/main.gleam:2[39m
//fn(a) { ... }
[90msrc/main.gleam:3[39m
//fn() { ... }

--- OUTPUT ON JAVASCRIPT TARGET
[90msrc/main.gleam:2[39m
//fn(a) { ... }
[90msrc/main.gleam:3[39m
//fn() { ... }
