test-output/src/snapshots/test_output__generated_tests__echo_importing_module_named_inspect.snap
---
source: test-output/src/generated_tests.rs
expression: "./cases/echo_importing_module_named_inspect"
---
--- CODE
import inspect

pub fn main() {
  echo inspect.x
}

--- OUTPUT ON ERLANG TARGET
[90msrc/main.gleam:4[39m
Nil

--- OUTPUT ON JAVASCRIPT TARGET
[90msrc/main.gleam:4[39m
Nil
