test-output/src/snapshots/test_output__generated_tests__echo_list.snap
---
source: test-output/src/generated_tests.rs
expression: "./cases/echo_list"
---
--- CODE
pub fn main() {
  echo []
  echo [1, 2, 3]
}

--- OUTPUT ON ERLANG TARGET
[90m/Users/giacomocavalieri/Documents/progetti/gleam/test-output/cases/echo_list/src/main.gleam:2[39m
[]
[90m/Users/giacomocavalieri/Documents/progetti/gleam/test-output/cases/echo_list/src/main.gleam:3[39m
[1, 2, 3]

--- OUTPUT ON JAVASCRIPT TARGET
[90m/Users/giacomocavalieri/Documents/progetti/gleam/test-output/cases/echo_list/src/main.gleam:2[39m
[]
[90m/Users/giacomocavalieri/Documents/progetti/gleam/test-output/cases/echo_list/src/main.gleam:3[39m
[1, 2, 3]
