test-output/src/snapshots/test_output__generated_tests__echo_nil.snap
---
source: test-output/src/generated_tests.rs
expression: "./cases/echo_nil"
---
--- CODE
pub fn main() {
  echo Nil
}

--- OUTPUT ON ERLANG TARGET
Nil

--- OUTPUT ON JAVASCRIPT TARGET
Nil
