test-output/src/snapshots/test_output__generated_tests__echo_string.snap
---
source: test-output/src/generated_tests.rs
expression: "./cases/echo_string"
---
--- CODE
pub fn main() {
  echo "hello world"
  echo "multiline
string"
  echo "string with\t\r\nescaped chars"
}

--- OUTPUT ON ERLANG TARGET
[90msrc/main.gleam:2[39m
"hello world"
[90msrc/main.gleam:3[39m
"multiline\nstring"
[90msrc/main.gleam:5[39m
"string with\t\r\nescaped chars"

--- OUTPUT ON JAVASCRIPT TARGET
[90msrc/main.gleam:2[39m
"hello world"
[90msrc/main.gleam:3[39m
"multiline\nstring"
[90msrc/main.gleam:5[39m
"string with\t\r\nescaped chars"
